--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,49 @@
-version: "3.7"
+version: "3.3"
 services:
   covid-tracker-frontend:
-    build: .
+    build: ./deCovidTracker-frontend
     image: covid-tracker-frontend
-    name: covid-tracker-frontend
+    container_name: covid-tracker-frontend
     restart: unless-stopped
     ports:
-      - 3004:3000
+      - 5004:5000
     environment:
-      - REACT_APP_BACKEND_URL=example.org
-      - REACT_APP_ASSOCIATION_NAME=<some_association>
-      - REACT_APP_MAX_PEOPLE_NUMBER=<some_number>
+      # DONT CHANGE HERE, CHANGE .env FILE INSIDE PROJECT
+      # SINCE process.env is part of node, not the browser,
+      # variables get accessed during build
+      - REACT_APP_BACKEND_URL=$BACKEND_PREFIX.eurielec.etsit.upm.es
+      - REACT_APP_ASSOCIATION_NAME=$ASSOCIATION_NAME
+      - REACT_APP_MAX_PEOPLE_NUMBER=$MAX_PEOPLE_NUMBER
+
+  covid-tracker-backend:
+    build: ./deCovidTracker
+    image: covid-tracker-backend
+    container_name: covid-tracker-backend
+    restart: unless-stopped
+    ports:
+      - 8001:80
+    environment:
+      - TELEGRAM_BOT_TOKEN=$TELEGRAM_BOT_TOKEN
+      - TELEGRAM_CHAT_ID=$TELEGRAM_CHAT_ID
+      - MAX_PEOPLE=$MAX_PEOPLE_NUMBER
+      - ADMIN_USER=$ADMIN_USER
+      - ADMIN_PASSWORD=$ADMIN_PASSWORD
+      - FRONTEND_URL=https://$FRONTEND_PREFIX.eurielec.etsit.upm.es
+      - DATABASE_NAME=$COVID_POSTGRES_DB
+      - DATABASE_USER=$COVID_POSTGRES_USER
+      - DATABASE_PASSWORD=$COVID_POSTGRES_PASSWORD
+      - DATABASE_HOST=covid-database
+      - DATABASE_PORT=5432
+      - LOG_FILE=covid-tracker.log
+      - LOG_LEVEL=INFO
+
+  covid-database:
+    container_name: covid-database
+    image: bitnami/postgresql:13-debian-10
+    environment:
+      - POSTGRES_USER=$COVID_POSTGRES_USER
+      - POSTGRES_PASSWORD=$COVID_POSTGRES_PASSWORD
+      - POSTGRES_DB=$COVID_POSTGRES_DB
+    volumes:
+      - "$COVID_POSTGRES_DATA:/var/lib/postgresql/data"
+    restart: unless-stopped
